--- a/sass/tabla/_tabla.scss
+++ b/sass/tabla/_tabla.scss
@@ -1,7 +1,5 @@
 //Styles
 
-
-
 html{
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -40,12 +38,32 @@ th{
 #bold{
   color: gray;
   font-weight: bold;
-  left: 79%;
+  left: 78%;
+}
+
+#column-vertical{
+  background-color: rgba(170, 170, 170, 0.842);
+  border-radius: 5px;
+  color: white;
+  height: 519px;
+  left: 1360px;
+  top: 131px;
+  width: 50px;
+}
+
+#column-horizontal{
+  background-color: rgba(170, 170, 170, 0.842);
+  border-radius: 5px;
+  color: white;
+  height: 50px;
+  left: 95px;
+  top: 658px;
+  width: 1258px;
 }
 
 #italic{
   color: gray;
-  left: 85%;
+  left: 84%;
 }
 
 #size{
